Some changes in game

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Jumbotron with Title -->
     <div class="jumbotron text-center">
       <h1><strong>Crystal Collector Game!</strong></h1>
-      <p><span class="glyphicon glyphicon-star">Match the target, win the game. </span><span class="glyphicon glyphicon-star"> </span></p>
+      <p><span class="glyphicon glyphicon-grain"> A game of collecting points. </span></span></p>
     </div>
     <div class="row">
 
